fix:metadataに関するエンドポイントは利用がないため、削除
